# cgn-cli

./: CHANGELOG.md  Cargo.toml  README.md
src/: benchmark.rs  genetic_algorithm.rs  main.rs
